--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
-plugins {
+final def var = plugins {
     id 'com.android.application'
 }
+var
 
 android {
     compileSdkVersion 30
@@ -9,12 +10,13 @@ android {
     defaultConfig {
         applicationId "com.carplate.camerax"
         minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 2
-        versionName "1.0.0"
+        targetSdkVersion 31
+        versionCode 1
+        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     aaptOptions {
         noCompress "tflite"
         noCompress "lite"
@@ -26,6 +28,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -47,6 +50,5 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-gpu:+'
     implementation 'org.tensorflow:tensorflow-lite:2.0.0'
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly-SNAPSHOT'
-    // This dependency adds the necessary TF op support.
     implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly-SNAPSHOT'
 }
